--- a/THANKS
+++ b/THANKS
@@ -1,4 +1,4 @@
-$Id: THANKS,v 1.11 2011/03/14 03:03:28 thommey Exp $:
+$Id: THANKS,v 1.12 2011/10/25 16:49:54 thommey Exp $:
 
 Eggdrop Developers and Contributors
 Last revised: January 27, 2011
@@ -203,6 +203,7 @@ dirtymac
 DocSavag       Jerry Sutton                    jerrystn@ccse.net
 dollar
                Donovan Long
+Dopsy                                          dopsy@orastie.org
 dorgan
 dork
 dracwolf
