Fixed the format specifier for the Tcl [traffic] command.

--- a/doc/Changes1.8
+++ b/doc/Changes1.8
@@ -1,10 +1,13 @@
-$Id: Changes1.8,v 1.57 2011/10/25 16:47:19 thommey Exp $
+$Id: Changes1.8,v 1.58 2011/11/10 22:07:25 thommey Exp $
 
 Eggdrop Changes (since version 1.8.0)
 
     _____________________________________________________________________
 
 1.8.0 (CVS):
+
+  - Fixed the format specifier for the Tcl [traffic] command.
+    Found by: Vertigo / Patch by: thommey
 
   - Added missing read trace flag to the nick-len variable trace after
     being unset to make the trace be removed properly on unload.
