--- a/THANKS
+++ b/THANKS
@@ -1,4 +1,4 @@
-$Id: THANKS,v 1.12 2011/10/25 16:49:54 thommey Exp $:
+$Id: THANKS,v 1.13 2011/11/10 22:07:24 thommey Exp $:
 
 Eggdrop Developers and Contributors
 Last revised: January 27, 2011
@@ -575,6 +575,7 @@ upstream       Christian Larsen                upstream@shell2.lomag.net
 Vassago        Ryan Addams                     rowan@unix.mclv.net
 vern-n
 vertex
+Vertigo        Sergey Goltsov                  sergiosolnet@gmail.com
                                                vince@who.net
 vod            Roger Stone                     capsterx@hotmail.com
 void
