Remove wrong truncation of ERR_YOUREBANNEDCREEP output to console.

--- a/doc/Changes1.8
+++ b/doc/Changes1.8
@@ -1,10 +1,13 @@
-$Id: Changes1.8,v 1.58 2011/11/10 22:07:25 thommey Exp $
+$Id: Changes1.8,v 1.59 2012/06/15 00:04:59 thommey Exp $
 
 Eggdrop Changes (since version 1.8.0)
 
     _____________________________________________________________________
 
 1.8.0 (CVS):
+
+  - Remove wrong truncation of ERR_YOUREBANNEDCREEP output to console.
+    Found by: Edelstahl / Patch by: thommey
 
   - Fixed the format specifier for the Tcl [traffic] command.
     Found by: Vertigo / Patch by: thommey
