new stripcode flag "o" for mirc ctrl+o and * for everything

--- a/doc/Changes1.8
+++ b/doc/Changes1.8
@@ -1,10 +1,14 @@
-$Id: Changes1.8,v 1.61 2012/06/19 14:27:17 thommey Exp $
+$Id: Changes1.8,v 1.62 2012/06/22 21:38:54 thommey Exp $
 
 Eggdrop Changes (since version 1.8.0)
 
     _____________________________________________________________________
 
 1.8.0 (CVS):
+
+  - Added a [stripcodes] flag to remove mIRC's CTRL+o (ascii 15) which
+    terminates all bold, underline, color. Also added * to strip everything.
+    Patch by: thommey / Found by: SpiKe, ealexp
 
   - Partially revert changes to vwait/update. They are back to only
     processing Tcl events for now (fileevent/after) as handling eggdrop
