add stripcodes flag to strip italics and rename code for stripcodes o

--- a/doc/Changes1.8
+++ b/doc/Changes1.8
@@ -1,10 +1,15 @@
-$Id: Changes1.8,v 1.62 2012/06/22 21:38:54 thommey Exp $
+$Id: Changes1.8,v 1.63 2012/06/22 23:35:32 thommey Exp $
 
 Eggdrop Changes (since version 1.8.0)
 
     _____________________________________________________________________
 
 1.8.0 (CVS):
+
+
+  - Added a [stripcodes] flag to remove mIRC's italics (ascii 29).
+  - Refactored code to clarify 'o' means "ordinary".
+    Patch by: thommey / Found by: speechles
 
   - Added a [stripcodes] flag to remove mIRC's CTRL+o (ascii 15) which
     terminates all bold, underline, color. Also added * to strip everything.
