--- a/doc/Changes1.8
+++ b/doc/Changes1.8
@@ -1,4 +1,4 @@
-$Id: Changes1.8,v 1.63 2012/06/22 23:35:32 thommey Exp $
+$Id: Changes1.8,v 1.64 2012/06/26 21:20:49 thommey Exp $
 
 Eggdrop Changes (since version 1.8.0)
 
@@ -6,6 +6,9 @@ Eggdrop Changes (since version 1.8.0)
 
 1.8.0 (CVS):
 
+
+  - Clarify documentation of mask matching in bind notc.
+    Patch by: Pixelz
 
   - Added a [stripcodes] flag to remove mIRC's italics (ascii 29).
   - Refactored code to clarify 'o' means "ordinary".
