Export the tcl_result* functions to modules

--- a/doc/Changes1.8
+++ b/doc/Changes1.8
@@ -1,4 +1,4 @@
-$Id: Changes1.8,v 1.64 2012/06/26 21:20:49 thommey Exp $
+$Id: Changes1.8,v 1.65 2012/09/25 17:24:41 thommey Exp $
 
 Eggdrop Changes (since version 1.8.0)
 
@@ -6,6 +6,9 @@ Eggdrop Changes (since version 1.8.0)
 
 1.8.0 (CVS):
 
+  - Export the tcl_result* functions to modules. They're required because
+    access to interp->result will be removed from Tcl.
+    Patch by: thommey / Found by: Nocty
 
   - Clarify documentation of mask matching in bind notc.
     Patch by: Pixelz
