--- a/doc/Changes1.8
+++ b/doc/Changes1.8
@@ -1,10 +1,13 @@
-$Id: Changes1.8,v 1.66 2012/12/10 22:49:45 thommey Exp $
+$Id: Changes1.8,v 1.67 2012/12/11 13:27:44 thommey Exp $
 
 Eggdrop Changes (since version 1.8.0)
 
     _____________________________________________________________________
 
 1.8.0 (CVS):
+
+  - Make sure match_cidr returns NOMATCH if address families mismatch.
+    Patch by: Robby
 
   - Fix match_cidr to always return MATCH if the prefix is 0.
     Patch by: thommey / Found by: Robby
