--- a/doc/Changes1.8
+++ b/doc/Changes1.8
@@ -1,10 +1,13 @@
-$Id: Changes1.8,v 1.67 2012/12/11 13:27:44 thommey Exp $
+$Id: Changes1.8,v 1.68 2012/12/19 22:30:43 thommey Exp $
 
 Eggdrop Changes (since version 1.8.0)
 
     _____________________________________________________________________
 
 1.8.0 (CVS):
+
+  - Fix a special char issue in dccwhois.tcl
+    Patch by: thommey / Found by: dupondje
 
   - Make sure match_cidr returns NOMATCH if address families mismatch.
     Patch by: Robby
